# FaPra2026

./: .gitignore
workspace/: CMakeLists.txt  CMakePresets.json  README.ME
workspace/Zwischenspeicher/: BuildingHandler.cpp
workspace/backend/: CMakeLists.txt
workspace/backend/include/: AddressNode.hpp  AdminArea.hpp  AreaHandler.hpp  Building.hpp  BuildingHandler.hpp  MemoryUsageHelper.hpp  PBFLoader.hpp  Point.hpp  PreProcessingUnit.hpp  Road.hpp  RoadHandler.hpp  UtilFunctions.hpp
workspace/backend/src/: PBFLoader.cpp  PreProcessingUnit.cpp  server.cpp
workspace/frontend/: WebView.html  WebView2.html
